# ding

./: .gitignore  README.md  eval.py  pyproject.toml  runner.py  setup.py
assets/: 000000000001.pt
configs/: run.yaml
configs/sampler/: alimama_controlnet.yaml  daps.yaml  delayed_ding.yaml  ding.yaml  flow_chef.yaml  flow_dps.yaml  pnp_flow.yaml  psld.yaml  reddiff.yaml  resample.yaml
configs/task/: latent_bottom.yaml  latent_center.yaml  latent_half.yaml  latent_strip.yaml  latent_top.yaml  mask_inpainting.yaml
data/: README.md  compute_stats.py  generate_captions_div2k.py  prepare_pie_bench.py
src/: experiments_tools.py  image_utils.py  local_paths.py  metrics.py
src/fm/: bridge.py  inv_problem.py  operators.py
src/fm/samplers/: __init__.py  alimama_controlnet.py  daps.py  delayed_exact_algo.py  exact_algo.py  flow_chef.py  flow_dps.py  pnp_flow.py  psld.py  reddiff.py  resample.py
src/fm/wrappers/: __init__.py  base.py  sd3.py
